--- a/src/styles/card-button.css
+++ b/src/styles/card-button.css
@@ -11,6 +11,9 @@
 
 .button {
     border-radius: 3px;
+    margin: 12px 4px 0 0;
+    font-size: 14px;
+    color: #FFFFFF;
     background-color: #61BD4F;
-    color: antiquewhite;
+    padding: 6px 12px;
 }
