--- a/src/styles/card-button.css
+++ b/src/styles/card-button.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 .button-container {
@@ -10,6 +10,7 @@
 }
 
 .button {
+    border: none;
     border-radius: 3px;
     margin: 12px 4px 0 0;
     font-size: 14px;
