[yangyang] feat: #35 change table margin css to auto

--- a/src/styles/board-version-record.css
+++ b/src/styles/board-version-record.css
@@ -1,7 +1,7 @@
 table {
     border-collapse: collapse;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
-    margin-left: 220px;
+    margin: auto;
 }
 
 caption {
