--- a/src/styles/requirementChangeAnalysis.css
+++ b/src/styles/requirementChangeAnalysis.css
@@ -4,6 +4,18 @@
     align-items: center;
 }
 
+.pies-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.single-pie {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .histogram-desc {
     display: flex;
     flex-direction: column;
@@ -15,6 +27,7 @@
     display: flex;
     font-size: 38px;
     justify-content: center;
+    align-items: center;
 }
 
 .description-area {
